--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ wasm-bindgen = "0.2.80"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 minidom = "0.14.0"
-
+pdf = "0.7.2"
 
 
 [lib]
